--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
   <body>
     <header>
       <h1 class="center-arial">Chinyere Obi</h1>
-      <h2 class="center-arial">Welcome to My Personal Page!</h2>
+      <h3 class="center-arial">Welcome to My Linkedtree Page!</h3>
     </header>
     <h4 class="blob">
-      Hello there. I look forward to the opportunity to work with you. I come
-      with a background in Project management, Business analysis, Software
-      implementation and full stack development in software development
-      companies.
+      I am an experienced Business Analyst, Project Manager, and Full Stack Developer with a proven track record of delivering high-quality software implementations across various industries. With a unique combination of business acumen and technical expertise, I excel at bridging the gap between stakeholders and development teams to ensure successful project outcomes.
     </h4>
     <p>
       <div class="links">
@@ -43,7 +40,7 @@
     </p>
     <p>
       <div class="links">
-        <a href="mailto:dr.cobi10@gmail.com" target="_blank">Email me</a>
+        <a href="mailto:dr.cobi10@gmail.com" target="_blank">Connect with me</a>
       </div>
     </p>
   </body>
